<resources>
    <string name="app_name">Quality Services</string>
    <string name="ivGeralQualityServicesDesc">TODO</string>
    <string name="tvBRaTitulo1Label">Busca Rápida - Pronto Atendimento</string>
    <string name="tvBRaFiltro1Label">Hospital:</string>
    <string name="etBraFiltro1Hint">Ex.: Hospital Albert Einstein</string>
    <string name="tvBRaFiltro2Label">Convênio:</string>
    <string name="tvBRaFiltro3Label">Distância:</string>
    <string name="tvBRaOuLabel">ou</string>
    <string name="tvBRaFiltro4Label">Tempo de Espera:</string>
    <string name="tvBRaObs1Label">Nota: Todos os campos são opcionais, no entanto, é necessário preencher ao menos um.</string>
    <string name="btBRaBuscarLabel">Buscar</string>
    <string name="strNadaSelecionado">Nenhum filtro foi especificado.\n\Por favor preencha ao menos um filtro.</string>
    <string name="strHospitalEspecifico">Devido a um hospital específico ter sido selecionado, os demais filtros serão ignorados.</string>
    <string name="tvNenhumencontradoLabel">Nenhum hospital encontrado.</string>
    <string name="tvVDRNomeLabel">Nome:</string>
    <string name="tvVDREnderecoLabel">Endereço:</string>
    <string name="tvVDRTempoesperaLabel">Tempo de Espera:</string>
    <string name="tvVDRDistanciaLabel">Distância:</string>
    <string name="tvVDREspecialidadeLabel">Especialidade:</string>
    <string name="tvVDRNotageralLabel">Nota Geral:</string>
    <string name="tvVDRSelecioneLabel">Selecione seu mapa de navegação:</string>
    <string name="tvVDRAvaliarLabel">Clique Aqui para contribuir com os demais usuários fazendo sua Avaliação deste hospital.</string>
    <string name="tvVDRMapsLabel">Google Maps</string>
    <string name="tvVDRWazeLabel">Waze</string>
    <string name="tvAvaHospitalLabel">Selecione um Hospital:</string>
    <string name="tvAVDHospitalSelecionadoLabel">Hospital:</string>
    <string name="tvAvaDataLabel">Data do atendimento:</string>
    <string name="tvAvaEsperaLabel">Tempo de Espera:</string>
    <string name="tvAvaEstacionamentoLabel">Estacionamento:</string>
    <string name="tvAvaRecepcaoLabel">Recepção:</string>
    <string name="tvAvaOrganizacaoLabel">Organização:</string>
    <string name="tvAvaSinalizacaoLabel">Sinalização:</string>
    <string name="tvAvaObservacaoLabel">Observação (Opcional):</string>
    <string name="tvAvaObservacaoHint">Digite aqui sua observação.\n\Máximo de 140 caracteres.</string>
    <string name="tvAvaCordialidadeLabel">Cordialidade:</string>
    <string name="tvAvaLimpezaLabel">Limpeza:</string>
    <string name="tvAvaTriagemLabel">Triagem:</string>
    <string name="tvAvaMedicoLabel">Médico:</string>
    <string name="tvAvaEnfermariaLabel">Enfermaria:</string>
    <string name="tvAvaExamesLabel">Exames:</string>
    <string name="tvAvaInternacaoLabel">Internação:</string>
    <string name="tvAvaTituloLabel">Avaliar Qualidade dos Hospitais</string>
    <string name="etAvaHospitalLabel">Ex.: Hospital Albert Einstein</string>
    <string name="rbtAvaNaoutilizeiLabel">Não utilizei.</string>
    <string name="btAvaEnviarLabel">Enviar Avaliação</string>
    <string name="toastAvaEnviadaLabel">Avaliação enviada com sucesso.</string>
    <string name="strDataInvalida">Data inválida.\n\Por favor informe a data correta que visitou o hospital.</string>
    <string name="strDataInvalidaF">Data inválida.\n\A data inserida ainda não ocorreu.\n\Por favor informe a data correta que visitou o hospital.</string>
    <string name="strDataInvalidaA">Data inválida.\n\A data inserida é muito antiga.\n\Por favor informe a data correta que visitou o hospital.</string>
    <string name="strHospitalInvalido">Hospital inválido.\n\Por favor digite parte do nome do hospital desejado e o selecione na lista.</string>
    <string name="tvPerTitulo1Label">Meu Perfil</string>
    <string name="tvPerNomeLabel">Nome:</string>
    <string name="tvPerCPFLabel">CPF:</string>
    <string name="tvPerCelLabel">Celular:</string>
    <string name="tvPerCEPLabel">CEP:</string>
    <string name="tvPerEmailLabel">E-mail:</string>
    <string name="tvPerEditarLabel">Editar</string>
    <string name="tvEdtTitulo1Label">Editar Perfil</string>
    <string name="tvEdtSalvarLabel">Salvar</string>
    <string name="tvEdtNota1Label">Nota: Para demais alterações cadastrais, por favor utilize o Fale Conosco.</string>
    <string name="cepinvalidoLabel">CEP Inválido.\n\Por favor digite um CEP válido, ou deixe o campo vazio.</string>
    <string name="emailinvalidoLabel">E-mail Inválido.\n\Por favor digite um E-mail válido, ou deixe o campo vazio.</string>
    <string name="naoalterouLabel">Nenhum dado foi alterado.</string>
    <string name="alteroutdLabel">CEP e E-mail alterados com sucesso.</string>
    <string name="alteroucLabel">CEP alterado com sucesso.</string>
    <string name="alteroueLabel">E-mail alterado com sucesso.</string>
    <string name="tvPerSairLabel">Sair</string>
    <string name="tvFCTitulo1Label">Fale Conosco</string>
    <string name="tvFCTelefoneLabel">Telefone</string>
    <string name="tvFCEmailLabel">E-mail</string>
    <string name="tvFCWhatsLabel">WhatsApp</string>
    <string name="tvFCFaceLabel">FaceBook</string>
    <string name="tvFCSiteLabel">WebSite</string>
    <string name="tvFCChatLabel">Chat</string>
    <string name="tvBAvTituloLabel">Busca Avançada</string>
    <string name="tvBAvEsperaLabel">Espera</string>
    <string name="tvBAvEspecialidadeLabel">Especialidade</string>
    <string name="tvBAvDistanciaLabel">Distância</string>
    <string name="tvBAvConvenioLabel">Convenio</string>
    <string name="tvBAvNotageralLabel">Nota Geral</string>
    <string name="tvBAvEstacionamentoLabel">Estacionamento</string>
    <string name="tvBAvRecepcaoLabel">Recepção</string>
    <string name="tvBAvOrganizacaoLabel">Organização</string>
    <string name="tvBAvSinalizacaoLabel">Sinalização</string>
    <string name="tvBAvCordialidadeLabel">Cordialidade</string>
    <string name="tvBAvLimpezaLabel">Limpeza</string>
    <string name="tvBAvTriagemLabel">Triagem</string>
    <string name="tvBAvMedicoLabel">Médico</string>
    <string name="tvBAvEnfermariaLabel">Enfermaria</string>
    <string name="tvBAvExamesLabel">Exames</string>
    <string name="tvBAvInternacaoLabel">Internação</string>
    <string name="tvBAvPesquisarLabel">Pesquisar</string>
    <string name="tvAjuTituloLabel">Ajuda sobre o App</string>
    <string name="tvAjuBuscrapLabel">Como eu faço uma pesquisa rápida?</string>
    <string name="tvAjuBuscrapRLabel">\n\<b>Primeiro passo:</b>\n\Volte à tela inicial e escolha a opção "Busca Rápida".\n\ \n\<b>Segundo passo:</b>\n\Informe parte do nome do hospital desejado e o selecione na lista que será exibida OU os filtros que deseja utilizar na busca.\n\ \n\<b>Terceiro passo:</b>\n\Clique no botão "Buscar" para ser enviado à tela de resultados, onde você irá encontrar uma lista com todos os hospitais que se encaixam na busca.\n\ \n\<b>Quarto passo:</b>\n\Clique no botão "Ver Detalhes" do hospital que deseja para ver mais detalhes sobre o hospital.\n\ \n\</string>
    <string name="tvAjuBuscavaLabel">Como eu faço uma pesquisa avançada?</string>
    <string name="tvAjuBuscavaRLabel">\n\<b>Primeiro passo:</b>\n\Volte à tela inicial e escolha a opção "Busca Avançada".\n\ \n\<b>Segundo passo:</b>\n\Informe parte do nome do hospital desejado e o selecione na lista que será exibida OU os filtros que deseja utilizar na busca.\n\ \n\<b>Terceiro passo:</b>\n\Clique no botão "Pesquisar" para ser enviado à tela de resultados, onde você irá encontrar uma lista com todos os hospitais que se encaixam na busca.\n\ \n\<b>Quarto passo:</b>\n\Clique no botão "Ver Detalhes" do hospital que deseja para ver mais detalhes sobre o hospital.\n\ \n\</string>
    <string name="tvAjuAvaliarLabel">Como eu avalio um hospital?</string>
    <string name="tvAjuAvaliarRLabel">\n\<b>Alternativa 1\n\ \n\Primeiro passo:</b>\n\Volte à tela inicial e escolha a opção "Avaliar Hospital".\n\ \n\<b>Segundo passo:</b>\n\Informe parte do nome do hospital desejado e o selecione na lista que será exibida.\n\ \n\<b>Terceiro passo:</b>\n\Informe a data em que foi realizado o atendimento.\n\ \n\<b>Quarto passo:</b>\n\Informe a nota em cada um dos quesitos do hospital selecionado, (como Recepção, Organização, Limpeza, etc) preenchendo as estrelas de 0 a 5.\n\Caso não tenha utilizado algum quesito, marque a caixa "Não utilizei" do mesmo.\n\Caso deseje, poderá também escrever um comentário ou observação deste hospital ao final da página.\n\ \n\<b>Quinto passo:</b>\n\Clique no botão "Enviar Avaliação" para concluir o processo e enviar sua avaliação sobre este hospital.\n\ \n\ \n\ \n\<b>Alternativa 2\n\ \n\Primeiro passo:</b>\n\Após executar uma pesquisa e acessar a página de "Ver Detalhes" do hospital desejado (caso necessário, verificar a seção "Como eu faço uma pesquisa rápida/avançada?").\n\Clicar no botão "Clique Aqui para contribuir com os demais usuários fazendo sua Avaliação deste hospital." para ser enviado para a tela de avaliar o hospital.\n\ \n\<b>Segundo passo:</b>\n\Seguir as intruções informadas a partir do Passo 3 da Alternativa 1.\n\ \n\</string>
    <string name="tvAjuEditperfLabel">Como posso editar meu perfil?</string>
    <string name="tvAjuEditperfRLabel">\n\<b>Primeiro passo:</b>\n\Volte à tela inicial e escolha a opção "Meu Perfil".\n\ \n\<b>Segundo passo:</b>\n\Clique no botão "Editar" para ser enviado à tela de edição.\n\ \n\<b>Terceiro passo:</b>\n\Preencha os campos (CEP e/ou E-mail) que deseja alterar.\n\Nota: Caso deseje alterar outras informações, por favor entre em contato com nossos atendentes por meio do "Fale Conosco".\n\ \n\<b>Quarto passo:</b>\n\Clique no botão "Salvar" para concluir o processo e salvar suas alterações.\n\ \n\</string>
    <string name="tvAjuContatoLabel">Como eu entro em contato com o suporte?</string>
    <string name="tvAjuContatoRLabel">\n\<b>Primeiro passo:</b>\n\Volte à tela inicial e escolha a opção "Fale Conosco".\n\ \n\<b>Segundo passo:</b>\n\Clique no botão referente ao meio de contato que mais lhe agrada (Telefone, E-mail, Facebook, etc), para ser enviado para a plataforma desejada e poder conversar com um de nossos atendentes.\n\ \n\</string>
    <string name="tvAjuRankingLabel">Como posso ver os melhores hospitais?</string>
    <string name="tvAjuRankingRLabel">\n\<b>Primeiro passo:</b>\n\Volte à tela inicial e escolha a opção "Ranking".\n\ \n\<b>Segundo passo:</b>\n\Nesta tela, você poderá visualizar a lista dos melhores hospitais do Brasil segundo as avaliações dos usuários.\n\ \n\</string>
    <string name="etLogEmailHint">E-mail</string>
    <string name="etLogSenhaHint">Senha</string>
    <string name="btLogLoginLabel">Login</string>
    <string name="btLogCadastrasLabel">Cadastre-se</string>
    <string name="tvLogEsqueceuLabel">Esqueceu sua senha? Clique Aqui!</string>
    <string name="tvLogNaopossuiLabel">Não possui uma conta?</string>
    <string name="tvEsqTexto1Label">Caso já possua um E-mail cadastrado no Quality Services e esqueceu a senha, informe este E-mail cadastrado no campo abaixo.</string>
    <string name="tvCadNomeLabel">Nome Completo:</string>
    <string name="etCadNomeHint">Seu Nome e Sobrenome</string>
    <string name="tvCadCPFLabel">CPF:</string>
    <string name="etCadCPFHint">Apenas dígitos (ex.: 12345678901)</string>
    <string name="tvCadCelularLabel">Número de Celular com DDD:</string>
    <string name="etCadCelularHint">Apenas dígitos (ex.: 11912345678)</string>
    <string name="tvCadEmailLabel">E-mail:</string>
    <string name="etCadEmailHint">usuario@exemplo.com.br</string>
    <string name="tvCadSenhaLabel">Senha:</string>
    <string name="etCadSenhaHint">Mínimo de 6 caracteres</string>
    <string name="tvCadTermosPoliticaLabel">Ao se Cadastrar, você concorda com nossos Termos de Uso e Política de Privacidade.</string>
    <string name="btCadCadastrarLabel">Cadastrar</string>
</resources>