<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="womm.quality_services.app.activity_perfil">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tbPerToolbar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/ivPerArrowback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/ivGeralQualityServicesDesc"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08"
            app:srcCompat="@drawable/ic_arrowbackwhite" />

        <TextView
            android:id="@+id/tvPerTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitCenter"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="65dp" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tvPerTitulo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/tvPerTitulo1Label"
        android:textColor="#080808"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbPerToolbar" />

    <ImageView
        android:id="@+id/ivPerExit"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="19dp"
        android:contentDescription="@string/ivGeralQualityServicesDesc"
        app:layout_constraintEnd_toStartOf="@+id/tvPerSair"
        app:layout_constraintTop_toBottomOf="@+id/tbPerToolbar"
        app:srcCompat="@drawable/ic_exit" />

    <TextView
        android:id="@+id/tvPerSair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/tvPerSairLabel"
        android:textColor="#33B5E5"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbPerToolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPerTitulo1"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPerNomeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/tvPerNomeLabel"
            android:textColor="#131313"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvPerNomeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:textColor="#303030"
            android:textSize="16sp"
            android:text="" />

        <TextView
            android:id="@+id/tvPerCPFLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPerCPFLabel"
            android:textColor="#131313"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvPerCPFValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:textColor="#303030"
            android:textSize="16sp"
            android:text="" />

        <TextView
            android:id="@+id/tvPerCelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPerCelLabel"
            android:textColor="#131313"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvPerCelValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:textColor="#303030"
            android:textSize="16sp"
            android:text="" />

        <TextView
            android:id="@+id/tvPerCEPLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPerCEPLabel"
            android:textColor="#131313"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvPerCEPValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:textColor="#303030"
            android:textSize="16sp"
            android:text="" />

        <TextView
            android:id="@+id/tvPerEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPerEmailLabel"
            android:textColor="#131313"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvPerEmailValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:textColor="#303030"
            android:textSize="16sp"
            android:text="" />

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cvPerEditar"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvPerBuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/tvPerEditarLabel"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/pbPerfil"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbPerToolbar"
        app:layout_constraintVertical_bias="0.419" />

</android.support.constraint.ConstraintLayout>
